# sage

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
extlibs/: CMakeLists.txt
include/sage/: sage.hpp
include/sage/core/: assert.hpp  config.hpp  log.hpp  macros.hpp
include/sage/test/: test.hpp
playground/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  log.cpp  log.unittest.cpp  test.cpp
src/core/: log.cpp
tests/: CMakeLists.txt  main.cpp
tests/unittests/: CMakeLists.txt
